# garua

./: .env.example  .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  main.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  settings.py  zensical.toml
.github/workflows/: docs.yml
backend/: package.json  pnpm-lock.yaml
backend/data/: estaciones.json
backend/src/: index.ts
backend/src/config/: cache.ts  config.ts
backend/src/controllers/: cache.controller.ts  senamhi.controller.ts  stations.controller.ts
backend/src/data/: estaciones.ts
backend/src/middlewares/: validateRequest.ts
backend/src/routes/: senamhi.routes.ts  stations.routes.ts
backend/src/services/: senamhi.service.ts  stations.service.ts
backend/src/types/: request.ts  station.ts
backend/src/types/station/: hydrologicalStation.ts  meteorologicalStation.ts  station.ts
backend/src/utils/: convert.ts  parsedDate.ts  string.ts  url.ts  validators.ts
docs/: CNAME  changelog.md  index.md  installation.md  quickstart.md  table-content.md
docs/development/: architecture.md  contributing.md  mcp-server.md
docs/guides/: buscar-estaciones.md  comparar-periodos.md  descargar-datos.md  explorar-csv.md  recomendar-estacion.md  resumir-periodo.md  validar-datos.md
docs/javascripts/: terminal.js
docs/reference/: cli.md  data-quality.md  environment.md  output-files.md  tools.md
docs/stylesheets/: extra.css
docs/usage/: cli.md  examples.md  mcp-concept.md  mcp.md
frontend/: eslint.config.mjs  index.html  package.json  tsconfig.json
frontend/src/: main.tsx  provider.tsx
frontend/src/api/: api.ts
frontend/src/collections/: dates.ts
frontend/src/components/: icons.tsx  map.tsx  navbar.tsx
frontend/src/config/: site.ts
frontend/src/features/search/hooks/: useDataDownload.ts  useSearch.ts  useStation.ts
frontend/src/layouts/: default.tsx
frontend/src/lotties/: birdCrazy.tsx  weatherCloudy.tsx
frontend/src/pages/: index.tsx
frontend/src/pages/Forms/: FormPeriodDownload.tsx  FormRangeDownload.tsx  FormYearDownload.tsx
frontend/src/pages/forms/: FormYearDownload.tsx
frontend/src/styles/: globals.css  index.css
frontend/src/types/: form.ts  object.ts  station.ts
scripts/: generate_tools_reference.py
src/: query_handler.py  station_service.py
src/garua/: __init__.py  __main__.py  exceptions.py  main.py  mcp_server.py  settings.py
src/garua/data/: estaciones.json
src/garua/mcp_tools/: __init__.py  anomaly_tools.py  comparison_tools.py  download_tools.py  file_tools.py  recommendation_tools.py  station_tools.py  stats_tools.py  summary_tools.py
src/garua/models/: __init__.py  anomaly.py  comparison.py  file_tools.py  query.py  recommendation.py  responses.py  scraping.py  station.py  summary.py
src/garua/schemas/: anomaly.py  comparison.py  file_tools.py  mcp.py  scraping.py  station.py  summary.py
src/garua/scraping/: browser.py  query_modes.py  scraper.py
src/garua/services/: anomaly.py  comparison.py  downloaded_files.py  file_preview.py  recommendation.py  scraping.py  station.py  summary.py
src/garua/services/metrics/: __init__.py  base.py
src/garua/storage/: csv_manager.py
src/garua/utils/: helpers.py  html_utils.py  special_values.py  ui_console.py
src/garua_mcp/: __init__.py  __main__.py
